Refactor statistics handling and update related components
Replaces old Statistic management logic with a database-driven approach using `StatisticHandler`. Removes the deprecated `Statistic` class and updates all related references in controllers, handlers, and core logic. Additional minor updates include improved code comments, method refactoring, and API naming consistency.

Signed-off-by: Ben <01bensch@gmail.com>